--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="orange1">#FC8E34</color>
 
     <color name="green1">#19CC95</color>
+    <color name="gray">#DDDDDD</color>
 </resources>
