--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="orange1">#FC8E34</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="green1">#19CC95</color>
     <color name="gray">#DDDDDD</color>
 </resources>
