--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <com.unstoppable.submitbuttonview.SubmitButton
-        android:id="@+id/submit_btn"
+        android:id="@+id/sbtn_loading"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
         app:buttonText="Submit"
         app:buttonTextSize="25sp" />
+
+    <com.unstoppable.submitbuttonview.SubmitButton
+        android:id="@+id/sbtn_progress"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
+        android:visibility="gone"
+        app:buttonText="Submit"
+        app:buttonTextSize="25sp"
+        app:progressStyle="progress" />
 
     <Button
         android:id="@+id/btn_succeed"
@@ -39,5 +49,14 @@
         android:layout_alignParentRight="true"
         android:layout_margin="10dp"
         android:text="reset" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:text="Progress Style Switch " />
+
 
 </RelativeLayout>
